[package]
name = "planet_backported"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
futures-lite = "1.11.3"
noise = "0.7.0"
rand = "0.8.0"
wgpu = "*"
#bevy_atmosphere = { path = "../bevy_atmosphere" }